--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
     <title>Zombies Blog</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./assets/img/icon.png" />
   </head>
   <body>
     <app-root></app-root>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
